add capodanno album

--- a/pages/portfolio/portfolio-category-filters.html
+++ b/pages/portfolio/portfolio-category-filters.html
@@ -66,10 +66,12 @@
         <div class="img-grid">
             <div class="item-sizer"></div>
             <a href="../../images/portfolio/thumb-35.jpg" data-caption="Nature #1" class="item lightbox woods"><img
-                    src="../../images/portfolio/thumb-35.jpg"></a><a href="../../images/portfolio/thumb-36.jpg"
+                    src="../../images/portfolio/thumb-35.jpg"></a>
+            <a href="../../images/album/capodanno/1.jpeg"
                                                                      data-caption="Nature #2"
                                                                      class="item lightbox mountains"><img
-                src="../../images/portfolio/thumb-36.jpg"></a><a href="../../images/portfolio/thumb-38.jpg"
+                src="../../images/album/capodanno/1.jpeg"></a>
+            <a href="../../images/portfolio/thumb-38.jpg"
                                                                  data-caption="Nature #3"
                                                                  class="item lightbox woods summer"><img
                 src="../../images/portfolio/thumb-38.jpg"></a><a href="../../images/portfolio/thumb-39.jpg"
