--- a/index.html
+++ b/index.html
@@ -66,63 +66,55 @@
     <section>
         <div class="img-grid col-3 spacious">
             <div class="item-sizer"></div>
-            <a class='item effect' href='pages/homepages/home-unique-scroll.html'><img
-                    src="images/preview/home-unique.jpg">
+            <a class='item effect' href='pages/album/capodanno.html'>
+                <img src="images/preview/rsz_capodanno-prev.jpg">
+                <div class="caption">Capodanno 2023</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-unique-scroll.html'>
+                <img src="images/preview/rsz_capodanno-prev.jpg">
                 <div class="caption">Home - Unique</div>
-            </a><a class='item effect' href='pages/homepages/home-image-stack.html'><img
-                src="images/preview/home-stack.jpg">
-            <div class="caption">Home - Stack</div>
-        </a><a class='item effect' href='pages/homepages/home-fullscreen.html'><img src="images/preview/home-hero.jpg">
-            <div class="caption">Home - Fullscreen</div>
-        </a><a class='item effect' href='pages/homepages/home-fullscreen-offset.html'><img
-                src="images/preview/home-hero-offset.jpg">
-            <div class="caption">Home - Fullscreen offset</div>
-        </a><a href="https://sylk.themevillain.com/pages/portfolio/home-fullscreen-border.html" class="item effect"><img
-                src="images/preview/home-hero-border.jpg">
-            <div class="caption">Home - Fullscreen border</div>
-        </a><a class='item effect' href='pages/homepages/home-hero-variant-1.html'><img
-                src="images/preview/home-hero-1.jpg">
-            <div class="caption">Home - Hero variant 1</div>
-        </a><a class='item effect' href='pages/homepages/home-hero-variant-2.html'><img
-                src="images/preview/home-hero-2.jpg">
-            <div class="caption">Home - Hero variant 2</div>
-        </a><a class='item effect' href='pages/homepages/home-sidebar-variant-1.html'><img
-                src="images/preview/home-sidebar-1.jpg">
-            <div class="caption">Home - Sidebar variant 1</div>
-        </a><a class='item effect' href='pages/homepages/home-sidebar-variant-2.html'><img
-                src="images/preview/home-sidebar-2.jpg">
-            <div class="caption">Home - Sidebar variant 2</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-unique-scroll.html'><img
-                src="images/preview/portfolio-unique.jpg">
-            <div class="caption">Portfolio - Unique</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-classic-2-columns.html'><img
-                src="images/preview/portfolio-2-col.jpg">
-            <div class="caption">Portfolio - 2 Columns</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-classic-3-columns.html'><img
-                src="images/preview/portfolio-3-col.jpg">
-            <div class="caption">Portfolio - 3 Columns</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-classic-4-columns.html'><img
-                src="images/preview/portfolio-4-col.jpg">
-            <div class="caption">Portfolio - 4 Columns</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-masonry.html'><img
-                src="images/preview/portfolio-masonry.jpg">
-            <div class="caption">Portfolio - Masonry</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-wide-photo.html'><img
-                src="images/preview/portfolio-wide.jpg">
-            <div class="caption">Portfolio - Wide</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-category-filters.html'><img
-                src="images/preview/portfolio-filter.jpg">
-            <div class="caption">Portfolio - Category Filters</div>
-        </a><a class='item effect' href='pages/portfolio/portfolio-titan-slider.html'><img
-                src="images/preview/portfolio-titan-slider.jpg">
-            <div class="caption">Portfolio - Titan Slider</div>
-        </a><a class='item effect' href='pages/about/index.html'><img src="images/preview/about.jpg">
-            <div class="caption">About</div>
-        </a><a class='item effect' href='pages/clients/index.html'><img src="images/preview/clients.jpg">
-            <div class="caption">Clients</div>
-        </a><a class='item effect' href='pages/contact/index.html'><img src="images/preview/contact.jpg">
-            <div class="caption">Contact</div>
-        </a></div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-unique-scroll.html'>
+                <img src="images/preview/rsz_capodanno-prev.jpg">
+                <div class="caption">Home - Unique</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-image-stack.html'>
+                <img src="images/preview/home-stack.jpg">
+                <div class="caption">Home - Stack</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-fullscreen.html'>
+                <img src="images/preview/home-hero.jpg">
+                <div class="caption">Home - Fullscreen</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-fullscreen-offset.html'>
+                <img src="images/preview/home-hero-offset.jpg">
+                <div class="caption">Home - Fullscreen offset</div>
+            </a>
+            <a href="https://sylk.themevillain.com/pages/portfolio/home-fullscreen-border.html" class="item effect">
+                <img src="images/preview/home-hero-border.jpg">
+                <div class="caption">Home - Fullscreen border</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-hero-variant-1.html'>
+                <img src="images/preview/home-hero-1.jpg">
+                <div class="caption">Home - Hero variant 1</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-hero-variant-2.html'>
+                <img src="images/preview/home-hero-2.jpg">
+                <div class="caption">Home - Hero variant 2</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-sidebar-variant-1.html'>
+                <img src="images/preview/home-sidebar-1.jpg">
+                <div class="caption">Home - Sidebar variant 1</div>
+            </a>
+            <a class='item effect' href='pages/homepages/home-sidebar-variant-2.html'>
+                <img src="images/preview/home-sidebar-2.jpg">
+                <div class="caption">Home - Sidebar variant 2</div>
+            </a>
+            <a class='item effect' href='pages/portfolio/portfolio-unique-scroll.html'>
+                <img src="images/preview/portfolio-unique.jpg">
+                <div class="caption">Portfolio - Unique</div>
+            </a>
+            </div>
     </section>
 </div>
 <script src="js/vendor.js"></script>
